ingress-minikube/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend-container
          image: fercdevv/backend-ingress:v2
          ports:
            - containerPort: 3000
