ingress-minikube/svc-bluegreen.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  labels:
    app: nginx

spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
