ingress-minikube/svc-fronted.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend

spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
